--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
                     <button id="diminuir-fonte" class="btn btn-primary fw-bold">A -</button>
 
+                    <button id="alterna-contraste" class="btn btn-primary fw-bold">A -</button>
+                    
+
+
                 </div>
             </div>
 
